# jams

./: .codespell_ignore_list  .gitignore  .readthedocs.yaml  .travis.yml  .travis_dependencies.sh  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: environment-ci.yml  environment-minimal.yml
.github/workflow/: jams.yml
.github/workflows/: ci.yml  jams.yml  lint_python.yml  release.yml
data/parsers/: billboard_chords_parser.py  medleydb_parser.py  smc_parser.py
datasets/ADC2004/: daisy3REF.jams  daisy4REF.jams  jazz1REF.jams  jazz3REF.jams  (+3 more)
docs/: Makefile  changes.rst  conf.py  eval.rst  example.rst  examples.rst  index.rst  jams.rst  jams_structure.rst  namespace.rst  namespace_structure.rst  ns.rst  quickstart.rst  requirements.txt  schema.rst  util.rst
examples/: ejh_v1.json  ejh_v2.json
jams/: __init__.py  _schema.py  core.py  display.py  eval.py  exceptions.py  jamongo.py  mongo_model.py  namespace.py  ns.py  nsconvert.py  pyjams.py  schema.py  sonify.py  util.py  version.py  viz.py
matjams/: JAMS.m  README.md  dump.m  load.m  matjams_load.m  matjams_parse.m  matjams_startup.m  startup.m
parsers/: adc2004_parser.py  adc2004melody_parser.py  billboard_chords_parser.py  isophonics_parser.py  jams_to_lab.py  jku_parser.py  marlchords_parser.py  medleydb_parser.py  mirex05melody_parser.py  rockcorpus_parser.py  salami_parser.py  smc_parser.py  tmc323_parser.py
pyjams/: README.md  __init__.py  eval.py  namespace.py  pyjams.py  util.py
schema/: jams_schema.json  jams_schema_v2.json
scripts/: jams_to_lab.py  jams_to_mirex_pattern.py
tests/: eval_test.py  jams_test.py  namespace_tests.py  schema_test.py  sonify_test.py  test_convert.py  test_display.py  test_eval.py  test_jams.py  test_ns.py  test_schema.py  test_sonify.py  test_util.py  util_test.py
(+3153 files in other folders)
