[tool:pytest]
addopts = --cov-report term-missing --cov jams --cov-report=xml

[coverage:report]
show_missing = True

[pydocstyle]
# convention = numpy
# Below is equivalent to numpy convention + D400 and D205
ignore = D107,D203,D205,D212,D213,D400,D402,D413,D415,D416,D417

[flake8]
count = True
statistics = True
show_source = True
select =
    E9,
    F63,
    F7,
    F82

[metadata]
name = jams
version = attr: jams.__version__
description = JAMS: A JSON Audio Metadata Standard
author = JAMS development crew
url = https://github.com/marl/jams
download_url = https://github.com/marl/jams/releases
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = ISC
python_requires = ">=3.9"
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
include_package_data = True
keywords = audio music json
package_data = 
scripts =
    scripts/jams_to_lab.py
install_requires =
    numpy >= 1.8.0
    jsonschema >= 3.0.0
    pandas >= 1.0.0
    mir_eval >= 0.8.2
    sortedcontainers >= 2.0.0
    six
    decorator

[options.package_data]
jams = 
    schemata/*.json
    schemata/namespaces/*.json
    schemata/namespaces/*/*.json

[options.extras_require]
display =
    matplotlib >= 1.5.0
tests =
    pytest ~= 8.0
    pytest-cov 
    matplotlib >= 3.0.0
